tests/NormalTests/paczka1/small_fuzzy/10084171.err
Error in line 3: gQSyc6 S867 99,5
Error in line 4: gQSyc6 S313 84,2
Error in line 5: gQSyc6 S316 28,8
Error in line 7: gQSyc6 S950 0,2
Error in line 8: gQSyc6 S313 9,6
Error in line 10: KDZYgtnfssm S316 73,8
